...
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/filterButtonToggleGroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/filterButtonToggleGroup" />

    <Button
        android:id="@+id/buttonAddTag"
        android:layout_width="64dp"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="+"
        android:textColor="@color/black"
...
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="To"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonAfter"
        app:layout_constraintEnd_toStartOf="@+id/buttonBefore"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toEndOf="@+id/buttonAfter"
        app:layout_constraintTop_toTopOf="@+id/buttonAfter" />

    <TextView
        android:id="@+id/textView62"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView61">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/descriptionInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Description"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView63">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/makeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Make"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

...
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="All" />

        <Button
            android:id="@+id/buttonOR"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:text="One" />
    </com.google.android.material.button.MaterialButtonToggleGroup>

...
